--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,15 @@
         "psr-4": {
             "EllGreen\\Pace\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "EllGreen\\Pace\\Tests\\": "tests/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9",
+        "mockery/mockery": "^1.4",
+        "mikey179/vfsstream": "^1.6"
     }
 }
