--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9",
         "mockery/mockery": "^1.4",
-        "mikey179/vfsstream": "^1.6"
+        "mikey179/vfsstream": "^1.6",
+        "spatie/phpunit-snapshot-assertions": "^4.2"
     }
 }
