--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,14 @@
         "php": "^7.4",
         "symfony/console": "^5.1",
         "illuminate/support": "^7.26",
-        "illuminate/view": "^7.26"
+        "illuminate/view": "^7.26",
+        "symfony/process": "^5.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9",
+        "mockery/mockery": "^1.4",
+        "mikey179/vfsstream": "^1.6",
+        "spatie/phpunit-snapshot-assertions": "^4.2"
     },
     "autoload": {
         "psr-4": {
@@ -24,11 +31,5 @@
         "psr-4": {
             "EllGreen\\Pace\\Tests\\": "tests/"
         }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9",
-        "mockery/mockery": "^1.4",
-        "mikey179/vfsstream": "^1.6",
-        "spatie/phpunit-snapshot-assertions": "^4.2"
     }
 }
