--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": "^7.4",
+        "ext-json": "*",
         "symfony/console": "^5.1",
         "illuminate/support": "^7.26",
         "illuminate/view": "^7.26",
