--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "symfony/console": "^5.1",
         "illuminate/support": "^7.26",
         "illuminate/view": "^7.26",
-        "symfony/process": "^5.1"
+        "symfony/process": "^5.1",
+        "mnapoli/front-yaml": "^1.7",
+        "league/commonmark": "^1.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
